syntax = "proto3";
option go_package = "github.com/SpecializedGeneralist/whatsnew/pkg/server/whatsnew";

package whatsnew;

import "google/api/annotations.proto";

import "google/protobuf/descriptor.proto";

import "google/protobuf/empty.proto";

message ResponseErrors {
  repeated ResponseError value = 1;
}

message ResponseError {
  string message = 1;
}

message NewFeeds {
  repeated NewFeed feeds = 1;
}

message NewFeed {
  string url = 1;
}

message CreateFeedsResponse {
  CreateFeedsData data = 1;

  ResponseErrors errors = 2;
}

message CreateFeedsData {
  repeated string feed_ids = 1;
}

message GetFeedsResponse {
  GetFeedsData data = 1;

  ResponseErrors errors = 2;
}

message GetFeedsData {
  repeated Feed feeds = 1;
}

message CreateFeedResponse {
  CreateFeedData data = 1;

  ResponseErrors errors = 2;
}

message CreateFeedData {
  string feed_id = 1;
}

message GetFeedResponse {
  GetFeedData data = 1;

  ResponseErrors errors = 2;
}

message GetFeedData {
  Feed feed = 1;
}

message UpdatedFeed {
  string url = 1;

  bool enabled = 2;

  string last_retrieved_at = 3;

  int64 failures_count = 4;

  string last_error = 5;
}

message UpdateFeedResponse {
  UpdateFeedData data = 1;

  ResponseErrors errors = 2;
}

message UpdateFeedData {
  Feed feed = 1;
}

message DeleteFeedResponse {
  DeleteFeedData data = 1;

  ResponseErrors errors = 2;
}

message DeleteFeedData {
  string deleted_feed_id = 1;
}

message GetUserTwitterSourcesResponse {
  GetUserTwitterSourcesData data = 1;

  ResponseErrors errors = 2;
}

message GetUserTwitterSourcesData {
  repeated UserTwitterSource user_twitter_sources = 1;
}

message NewUserTwitterSources {
  repeated NewUserTwitterSource user_twitter_sources = 1;
}

message CreateUserTwitterSourcesResponse {
  CreateUserTwitterSourcesData data = 1;

  ResponseErrors errors = 2;
}

message CreateUserTwitterSourcesData {
  repeated string user_twitter_source_ids = 1;
}

message NewUserTwitterSource {
  string username = 1;
}

message CreateUserTwitterSourceResponse {
  CreateUserTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message CreateUserTwitterSourceData {
  string user_twitter_source_id = 1;
}

message GetUserTwitterSourceResponse {
  GetUserTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message GetUserTwitterSourceData {
  UserTwitterSource user_twitter_source = 1;
}

message UpdatedUserTwitterSource {
  string username = 1;

  bool enabled = 2;

  string last_retrieved_at = 3;

  int64 failures_count = 4;

  string last_error = 5;
}

message UpdateUserTwitterSourceResponse {
  UpdateUserTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message UpdateUserTwitterSourceData {
  UserTwitterSource user_twitter_source = 1;
}

message DeleteUserTwitterSourceResponse {
  DeleteUserTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message DeleteUserTwitterSourceData {
  string deleted_user_twitter_source_id = 1;
}

message GetQueryTwitterSourcesResponse {
  GetQueryTwitterSourcesData data = 1;

  ResponseErrors errors = 2;
}

message GetQueryTwitterSourcesData {
  repeated QueryTwitterSource query_twitter_sources = 1;
}

message NewQueryTwitterSources {
  repeated NewQueryTwitterSource query_twitter_sources = 1;
}

message CreateQueryTwitterSourcesResponse {
  CreateQueryTwitterSourcesData data = 1;

  ResponseErrors errors = 2;
}

message CreateQueryTwitterSourcesData {
  repeated string query_twitter_source_ids = 1;
}

message NewQueryTwitterSource {
  string query = 1;
}

message CreateQueryTwitterSourceResponse {
  CreateQueryTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message CreateQueryTwitterSourceData {
  string query_twitter_source_id = 1;
}

message GetQueryTwitterSourceResponse {
  GetQueryTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message GetQueryTwitterSourceData {
  QueryTwitterSource query_twitter_source = 1;
}

message UpdatedQueryTwitterSource {
  string query = 1;

  bool enabled = 2;

  string last_retrieved_at = 3;

  int64 failures_count = 4;

  string last_error = 5;
}

message UpdateQueryTwitterSourceResponse {
  UpdateQueryTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message UpdateQueryTwitterSourceData {
  QueryTwitterSource query_twitter_source = 1;
}

message DeleteQueryTwitterSourceResponse {
  DeleteQueryTwitterSourceData data = 1;

  ResponseErrors errors = 2;
}

message DeleteQueryTwitterSourceData {
  string deleted_query_twitter_source_id = 1;
}

message GetZeroShotHypothesisTemplatesResponse {
  GetZeroShotHypothesisTemplatesData data = 1;

  ResponseErrors errors = 2;
}

message GetZeroShotHypothesisTemplatesData {
  repeated ZeroShotHypothesisTemplate zero_shot_hypothesis_templates = 1;
}

message NewZeroShotHypothesisTemplates {
  repeated NewZeroShotHypothesisTemplate zero_shot_hypothesis_templates = 1;
}

message NewZeroShotHypothesisTemplate {
  bool enabled = 1;

  string text = 2;

  bool multi_class = 3;

  repeated NewZeroShotHypothesisTemplateLabel labels = 4;
}

message NewZeroShotHypothesisTemplateLabel {
  bool enabled = 1;

  string text = 2;
}

message CreateZeroShotHypothesisTemplatesResponse {
  CreateZeroShotHypothesisTemplatesData data = 1;

  ResponseErrors errors = 2;
}

message CreateZeroShotHypothesisTemplatesData {
  repeated string zero_shot_hypothesis_template_ids = 1;
}

message CreateZeroShotHypothesisTemplateResponse {
  CreateZeroShotHypothesisTemplateData data = 1;

  ResponseErrors errors = 2;
}

message CreateZeroShotHypothesisTemplateData {
  string zero_shot_hypothesis_template_id = 1;
}

message GetZeroShotHypothesisTemplateResponse {
  GetZeroShotHypothesisTemplateData data = 1;

  ResponseErrors errors = 2;
}

message GetZeroShotHypothesisTemplateData {
  ZeroShotHypothesisTemplate zero_shot_hypothesis_template = 1;
}

message UpdatedZeroShotHypothesisTemplate {
  bool enabled = 1;

  string text = 2;

  bool multi_class = 3;
}

message UpdateZeroShotHypothesisTemplateResponse {
  UpdateZeroShotHypothesisTemplateData data = 1;

  ResponseErrors errors = 2;
}

message UpdateZeroShotHypothesisTemplateData {
  ZeroShotHypothesisTemplate zero_shot_hypothesis_template = 1;
}

message DeleteZeroShotHypothesisTemplateResponse {
  DeleteZeroShotHypothesisTemplateData data = 1;

  ResponseErrors errors = 2;
}

message DeleteZeroShotHypothesisTemplateData {
  string deleted_zero_shot_hypothesis_template_id = 1;
}

message NewZeroShotHypothesisLabels {
  repeated NewZeroShotHypothesisLabel zero_shot_hypothesis_labels = 1;
}

message NewZeroShotHypothesisLabel {
  bool enabled = 1;

  string text = 2;
}

message CreateZeroShotHypothesisLabelsResponse {
  CreateZeroShotHypothesisLabelsData data = 1;

  ResponseErrors errors = 2;
}

message CreateZeroShotHypothesisLabelsData {
  repeated string zero_shot_hypothesis_label_ids = 1;
}

message CreateZeroShotHypothesisLabelResponse {
  CreateZeroShotHypothesisLabelData data = 1;

  ResponseErrors errors = 2;
}

message CreateZeroShotHypothesisLabelData {
  string zero_shot_hypothesis_label_id = 1;
}

message GetZeroShotHypothesisLabelResponse {
  GetZeroShotHypothesisLabelData data = 1;

  ResponseErrors errors = 2;
}

message GetZeroShotHypothesisLabelData {
  ZeroShotHypothesisLabel zero_shot_hypothesis_label = 1;
}

message UpdatedZeroShotHypothesisLabel {
  bool enabled = 1;

  string text = 2;
}

message UpdateZeroShotHypothesisLabelResponse {
  UpdateZeroShotHypothesisLabelData data = 1;

  ResponseErrors errors = 2;
}

message UpdateZeroShotHypothesisLabelData {
  ZeroShotHypothesisLabel zero_shot_hypothesis_label = 1;
}

message DeleteZeroShotHypothesisLabelResponse {
  DeleteZeroShotHypothesisLabelData data = 1;

  ResponseErrors errors = 2;
}

message DeleteZeroShotHypothesisLabelData {
  string deleted_zero_shot_hypothesis_label_id = 1;
}

message NewInfoExtractionRules {
  repeated NewInfoExtractionRule info_extraction_rules = 1;
}

message NewInfoExtractionRule {
  string label = 1;

  string question = 2;

  string answer_regexp = 3;

  float threshold = 4;

  bool enabled = 5;
}

message CreateInfoExtractionRulesResponse {
  CreateInfoExtractionRulesData data = 1;

  ResponseErrors errors = 2;
}

message CreateInfoExtractionRulesData {
  repeated string info_extraction_rule_ids = 1;
}

message GetInfoExtractionRulesResponse {
  GetInfoExtractionRulesData data = 1;

  ResponseErrors errors = 2;
}

message GetInfoExtractionRulesData {
  repeated InfoExtractionRule info_extraction_rules = 1;
}

message CreateInfoExtractionRuleResponse {
  CreateInfoExtractionRuleData data = 1;

  ResponseErrors errors = 2;
}

message CreateInfoExtractionRuleData {
  string info_extraction_rule_id = 1;
}

message GetInfoExtractionRuleResponse {
  GetInfoExtractionRuleData data = 1;

  ResponseErrors errors = 2;
}

message GetInfoExtractionRuleData {
  InfoExtractionRule info_extraction_rule = 1;
}

message UpdatedInfoExtractionRule {
  string label = 1;

  string question = 2;

  string answer_regexp = 3;

  float threshold = 4;

  bool enabled = 5;
}

message UpdateInfoExtractionRuleResponse {
  UpdateInfoExtractionRuleData data = 1;

  ResponseErrors errors = 2;
}

message UpdateInfoExtractionRuleData {
  InfoExtractionRule info_extraction_rule = 1;
}

message DeleteInfoExtractionRuleResponse {
  DeleteInfoExtractionRuleData data = 1;

  ResponseErrors errors = 2;
}

message DeleteInfoExtractionRuleData {
  string deleted_info_extraction_rule_id = 1;
}

message Feed {
  string id = 1;

  string created_at = 2;

  string updated_at = 3;

  string url = 4;

  bool enabled = 5;

  string last_retrieved_at = 6;

  int64 failures_count = 7;

  string last_error = 8;
}

message UserTwitterSource {
  string id = 1;

  string created_at = 2;

  string updated_at = 3;

  string username = 4;

  bool enabled = 5;

  string last_retrieved_at = 6;

  int64 failures_count = 7;

  string last_error = 8;
}

message QueryTwitterSource {
  string id = 1;

  string created_at = 2;

  string updated_at = 3;

  string query = 4;

  bool enabled = 5;

  string last_retrieved_at = 6;

  int64 failures_count = 7;

  string last_error = 8;
}

message ZeroShotHypothesisTemplate {
  string id = 1;

  string created_at = 2;

  string updated_at = 3;

  bool enabled = 4;

  string text = 5;

  bool multi_class = 6;

  repeated ZeroShotHypothesisLabel labels = 7;
}

message ZeroShotHypothesisLabel {
  string id = 1;

  string created_at = 2;

  string updated_at = 3;

  bool enabled = 4;

  string text = 5;
}

message InfoExtractionRule {
  string id = 1;

  string created_at = 2;

  string updated_at = 3;

  string label = 4;

  string question = 5;

  string answer_regexp = 6;

  float threshold = 7;

  bool enabled = 8;
}

//GetFeedsParameters holds parameters to GetFeeds
message GetFeedsRequest {
  int64 first = 1;

  string after = 2;
}

//CreateFeedsParameters holds parameters to CreateFeeds
message CreateFeedsRequest {
  NewFeeds new_feeds = 1;
}

//CreateFeedParameters holds parameters to CreateFeed
message CreateFeedRequest {
  NewFeed new_feed = 1;
}

//GetFeedParameters holds parameters to GetFeed
message GetFeedRequest {
  string id = 1;
}

//UpdateFeedParameters holds parameters to UpdateFeed
message UpdateFeedRequest {
  string id = 1;

  UpdatedFeed updated_feed = 2;
}

//DeleteFeedParameters holds parameters to DeleteFeed
message DeleteFeedRequest {
  string id = 1;
}

//GetUserTwitterSourcesParameters holds parameters to GetUserTwitterSources
message GetUserTwitterSourcesRequest {
  int64 first = 1;

  string after = 2;
}

//CreateUserTwitterSourcesParameters holds parameters to CreateUserTwitterSources
message CreateUserTwitterSourcesRequest {
  NewUserTwitterSources new_user_twitter_sources = 1;
}

//CreateUserTwitterSourceParameters holds parameters to CreateUserTwitterSource
message CreateUserTwitterSourceRequest {
  NewUserTwitterSource new_user_twitter_source = 1;
}

//GetUserTwitterSourceParameters holds parameters to GetUserTwitterSource
message GetUserTwitterSourceRequest {
  string id = 1;
}

//UpdateUserTwitterSourceParameters holds parameters to UpdateUserTwitterSource
message UpdateUserTwitterSourceRequest {
  string id = 1;

  UpdatedUserTwitterSource updated_user_twitter_source = 2;
}

//DeleteUserTwitterSourceParameters holds parameters to DeleteUserTwitterSource
message DeleteUserTwitterSourceRequest {
  string id = 1;
}

//GetQueryTwitterSourcesParameters holds parameters to GetQueryTwitterSources
message GetQueryTwitterSourcesRequest {
  int64 first = 1;

  string after = 2;
}

//CreateQueryTwitterSourcesParameters holds parameters to CreateQueryTwitterSources
message CreateQueryTwitterSourcesRequest {
  NewQueryTwitterSources new_query_twitter_sources = 1;
}

//CreateQueryTwitterSourceParameters holds parameters to CreateQueryTwitterSource
message CreateQueryTwitterSourceRequest {
  NewQueryTwitterSource new_query_twitter_source = 1;
}

//GetQueryTwitterSourceParameters holds parameters to GetQueryTwitterSource
message GetQueryTwitterSourceRequest {
  string id = 1;
}

//UpdateQueryTwitterSourceParameters holds parameters to UpdateQueryTwitterSource
message UpdateQueryTwitterSourceRequest {
  string id = 1;

  UpdatedQueryTwitterSource updated_query_twitter_source = 2;
}

//DeleteQueryTwitterSourceParameters holds parameters to DeleteQueryTwitterSource
message DeleteQueryTwitterSourceRequest {
  string id = 1;
}

//GetZeroShotHypothesisTemplatesParameters holds parameters to GetZeroShotHypothesisTemplates
message GetZeroShotHypothesisTemplatesRequest {
  int64 first = 1;

  string after = 2;
}

//CreateZeroShotHypothesisTemplatesParameters holds parameters to CreateZeroShotHypothesisTemplates
message CreateZeroShotHypothesisTemplatesRequest {
  NewZeroShotHypothesisTemplates new_zero_shot_hypothesis_templates = 1;
}

//CreateZeroShotHypothesisTemplateParameters holds parameters to CreateZeroShotHypothesisTemplate
message CreateZeroShotHypothesisTemplateRequest {
  NewZeroShotHypothesisTemplate new_zero_shot_hypothesis_template = 1;
}

//GetZeroShotHypothesisTemplateParameters holds parameters to GetZeroShotHypothesisTemplate
message GetZeroShotHypothesisTemplateRequest {
  string id = 1;
}

//UpdateZeroShotHypothesisTemplateParameters holds parameters to UpdateZeroShotHypothesisTemplate
message UpdateZeroShotHypothesisTemplateRequest {
  string id = 1;

  UpdatedZeroShotHypothesisTemplate updated_zero_shot_hypothesis_template = 2;
}

//DeleteZeroShotHypothesisTemplateParameters holds parameters to DeleteZeroShotHypothesisTemplate
message DeleteZeroShotHypothesisTemplateRequest {
  string id = 1;
}

//CreateZeroShotHypothesisLabelsParameters holds parameters to CreateZeroShotHypothesisLabels
message CreateZeroShotHypothesisLabelsRequest {
  string template_id = 1;

  NewZeroShotHypothesisLabels new_zero_shot_hypothesis_labels = 2;
}

//CreateZeroShotHypothesisLabelParameters holds parameters to CreateZeroShotHypothesisLabel
message CreateZeroShotHypothesisLabelRequest {
  string template_id = 1;

  NewZeroShotHypothesisLabel new_zero_shot_hypothesis_label = 2;
}

//GetZeroShotHypothesisLabelParameters holds parameters to GetZeroShotHypothesisLabel
message GetZeroShotHypothesisLabelRequest {
  string template_id = 1;

  string label_id = 2;
}

//UpdateZeroShotHypothesisLabelParameters holds parameters to UpdateZeroShotHypothesisLabel
message UpdateZeroShotHypothesisLabelRequest {
  string template_id = 1;

  string label_id = 2;

  UpdatedZeroShotHypothesisLabel updated_zero_shot_hypothesis_label = 3;
}

//DeleteZeroShotHypothesisLabelParameters holds parameters to DeleteZeroShotHypothesisLabel
message DeleteZeroShotHypothesisLabelRequest {
  string template_id = 1;

  string label_id = 2;
}

//GetInfoExtractionRulesParameters holds parameters to GetInfoExtractionRules
message GetInfoExtractionRulesRequest {
  int64 first = 1;

  string after = 2;
}

//CreateInfoExtractionRulesParameters holds parameters to CreateInfoExtractionRules
message CreateInfoExtractionRulesRequest {
  NewInfoExtractionRules new_info_extraction_rules = 1;
}

//CreateInfoExtractionRuleParameters holds parameters to CreateInfoExtractionRule
message CreateInfoExtractionRuleRequest {
  NewInfoExtractionRule new_info_extraction_rule = 1;
}

//GetInfoExtractionRuleParameters holds parameters to GetInfoExtractionRule
message GetInfoExtractionRuleRequest {
  string id = 1;
}

//UpdateInfoExtractionRuleParameters holds parameters to UpdateInfoExtractionRule
message UpdateInfoExtractionRuleRequest {
  string id = 1;

  UpdatedInfoExtractionRule updated_info_extraction_rule = 2;
}

//DeleteInfoExtractionRuleParameters holds parameters to DeleteInfoExtractionRule
message DeleteInfoExtractionRuleRequest {
  string id = 1;
}

service Whatsnew {
  rpc GetFeeds ( GetFeedsRequest ) returns ( GetFeedsResponse ) {
    option (google.api.http) = { get:"/feeds"  };
  }

  rpc CreateFeeds ( CreateFeedsRequest ) returns ( CreateFeedsResponse ) {
    option (google.api.http) = { post:"/feeds" body:"new_feeds"  };
  }

  rpc CreateFeed ( CreateFeedRequest ) returns ( CreateFeedResponse ) {
    option (google.api.http) = { post:"/feed" body:"new_feed"  };
  }

  rpc GetFeed ( GetFeedRequest ) returns ( GetFeedResponse ) {
    option (google.api.http) = { get:"/feed/{id}"  };
  }

  rpc UpdateFeed ( UpdateFeedRequest ) returns ( UpdateFeedResponse ) {
    option (google.api.http) = { put:"/feed/{id}" body:"updated_feed"  };
  }

  rpc DeleteFeed ( DeleteFeedRequest ) returns ( DeleteFeedResponse ) {
    option (google.api.http) = { delete:"/feed/{id}"  };
  }

  rpc GetUserTwitterSources ( GetUserTwitterSourcesRequest ) returns ( GetUserTwitterSourcesResponse ) {
    option (google.api.http) = { get:"/twitter_sources/users"  };
  }

  rpc CreateUserTwitterSources ( CreateUserTwitterSourcesRequest ) returns ( CreateUserTwitterSourcesResponse ) {
    option (google.api.http) = { post:"/twitter_sources/users" body:"new_user_twitter_sources"  };
  }

  rpc CreateUserTwitterSource ( CreateUserTwitterSourceRequest ) returns ( CreateUserTwitterSourceResponse ) {
    option (google.api.http) = { post:"/twitter_sources/user" body:"new_user_twitter_source"  };
  }

  rpc GetUserTwitterSource ( GetUserTwitterSourceRequest ) returns ( GetUserTwitterSourceResponse ) {
    option (google.api.http) = { get:"/twitter_sources/user/{id}"  };
  }

  rpc UpdateUserTwitterSource ( UpdateUserTwitterSourceRequest ) returns ( UpdateUserTwitterSourceResponse ) {
    option (google.api.http) = { put:"/twitter_sources/user/{id}" body:"updated_user_twitter_source"  };
  }

  rpc DeleteUserTwitterSource ( DeleteUserTwitterSourceRequest ) returns ( DeleteUserTwitterSourceResponse ) {
    option (google.api.http) = { delete:"/twitter_sources/user/{id}"  };
  }

  rpc GetQueryTwitterSources ( GetQueryTwitterSourcesRequest ) returns ( GetQueryTwitterSourcesResponse ) {
    option (google.api.http) = { get:"/twitter_sources/queries"  };
  }

  rpc CreateQueryTwitterSources ( CreateQueryTwitterSourcesRequest ) returns ( CreateQueryTwitterSourcesResponse ) {
    option (google.api.http) = { post:"/twitter_sources/queries" body:"new_query_twitter_sources"  };
  }

  rpc CreateQueryTwitterSource ( CreateQueryTwitterSourceRequest ) returns ( CreateQueryTwitterSourceResponse ) {
    option (google.api.http) = { post:"/twitter_sources/query" body:"new_query_twitter_source"  };
  }

  rpc GetQueryTwitterSource ( GetQueryTwitterSourceRequest ) returns ( GetQueryTwitterSourceResponse ) {
    option (google.api.http) = { get:"/twitter_sources/query/{id}"  };
  }

  rpc UpdateQueryTwitterSource ( UpdateQueryTwitterSourceRequest ) returns ( UpdateQueryTwitterSourceResponse ) {
    option (google.api.http) = { put:"/twitter_sources/query/{id}" body:"updated_query_twitter_source"  };
  }

  rpc DeleteQueryTwitterSource ( DeleteQueryTwitterSourceRequest ) returns ( DeleteQueryTwitterSourceResponse ) {
    option (google.api.http) = { delete:"/twitter_sources/query/{id}"  };
  }

  rpc GetZeroShotHypothesisTemplates ( GetZeroShotHypothesisTemplatesRequest ) returns ( GetZeroShotHypothesisTemplatesResponse ) {
    option (google.api.http) = { get:"/zero_shot_hypothesis_templates"  };
  }

  rpc CreateZeroShotHypothesisTemplates ( CreateZeroShotHypothesisTemplatesRequest ) returns ( CreateZeroShotHypothesisTemplatesResponse ) {
    option (google.api.http) = { post:"/zero_shot_hypothesis_templates" body:"new_zero_shot_hypothesis_templates"  };
  }

  rpc CreateZeroShotHypothesisTemplate ( CreateZeroShotHypothesisTemplateRequest ) returns ( CreateZeroShotHypothesisTemplateResponse ) {
    option (google.api.http) = { post:"/zero_shot_hypothesis_template" body:"new_zero_shot_hypothesis_template"  };
  }

  rpc GetZeroShotHypothesisTemplate ( GetZeroShotHypothesisTemplateRequest ) returns ( GetZeroShotHypothesisTemplateResponse ) {
    option (google.api.http) = { get:"/zero_shot_hypothesis_template/{id}"  };
  }

  rpc UpdateZeroShotHypothesisTemplate ( UpdateZeroShotHypothesisTemplateRequest ) returns ( UpdateZeroShotHypothesisTemplateResponse ) {
    option (google.api.http) = { put:"/zero_shot_hypothesis_template/{id}" body:"updated_zero_shot_hypothesis_template"  };
  }

  rpc DeleteZeroShotHypothesisTemplate ( DeleteZeroShotHypothesisTemplateRequest ) returns ( DeleteZeroShotHypothesisTemplateResponse ) {
    option (google.api.http) = { delete:"/zero_shot_hypothesis_template/{id}"  };
  }

  rpc CreateZeroShotHypothesisLabels ( CreateZeroShotHypothesisLabelsRequest ) returns ( CreateZeroShotHypothesisLabelsResponse ) {
    option (google.api.http) = { post:"/zero_shot_hypothesis_template/{template_id}/labels" body:"new_zero_shot_hypothesis_labels"  };
  }

  rpc CreateZeroShotHypothesisLabel ( CreateZeroShotHypothesisLabelRequest ) returns ( CreateZeroShotHypothesisLabelResponse ) {
    option (google.api.http) = { post:"/zero_shot_hypothesis_template/{template_id}/label" body:"new_zero_shot_hypothesis_label"  };
  }

  rpc GetZeroShotHypothesisLabel ( GetZeroShotHypothesisLabelRequest ) returns ( GetZeroShotHypothesisLabelResponse ) {
    option (google.api.http) = { get:"/zero_shot_hypothesis_template/{template_id}/label/{label_id}"  };
  }

  rpc UpdateZeroShotHypothesisLabel ( UpdateZeroShotHypothesisLabelRequest ) returns ( UpdateZeroShotHypothesisLabelResponse ) {
    option (google.api.http) = { put:"/zero_shot_hypothesis_template/{template_id}/label/{label_id}" body:"updated_zero_shot_hypothesis_label"  };
  }

  rpc DeleteZeroShotHypothesisLabel ( DeleteZeroShotHypothesisLabelRequest ) returns ( DeleteZeroShotHypothesisLabelResponse ) {
    option (google.api.http) = { delete:"/zero_shot_hypothesis_template/{template_id}/label/{label_id}"  };
  }

  rpc GetInfoExtractionRules ( GetInfoExtractionRulesRequest ) returns ( GetInfoExtractionRulesResponse ) {
    option (google.api.http) = { get:"/info_extraction_rules"  };
  }

  rpc CreateInfoExtractionRules ( CreateInfoExtractionRulesRequest ) returns ( CreateInfoExtractionRulesResponse ) {
    option (google.api.http) = { post:"/info_extraction_rules" body:"new_info_extraction_rules"  };
  }

  rpc CreateInfoExtractionRule ( CreateInfoExtractionRuleRequest ) returns ( CreateInfoExtractionRuleResponse ) {
    option (google.api.http) = { post:"/info_extraction_rule" body:"new_info_extraction_rule"  };
  }

  rpc GetInfoExtractionRule ( GetInfoExtractionRuleRequest ) returns ( GetInfoExtractionRuleResponse ) {
    option (google.api.http) = { get:"/info_extraction_rule/{id}"  };
  }

  rpc UpdateInfoExtractionRule ( UpdateInfoExtractionRuleRequest ) returns ( UpdateInfoExtractionRuleResponse ) {
    option (google.api.http) = { put:"/info_extraction_rule/{id}" body:"updated_info_extraction_rule"  };
  }

  rpc DeleteInfoExtractionRule ( DeleteInfoExtractionRuleRequest ) returns ( DeleteInfoExtractionRuleResponse ) {
    option (google.api.http) = { delete:"/info_extraction_rule/{id}"  };
  }
}

